--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "coveralls": "^2.11.4",
     "istanbul": "^0.3.18",
     "mocha": "^2.2.5",
+    "mocha-eslint": "^1.0.0",
     "mocha-istanbul": "^0.2.0"
   },
   "dependencies": {
