--- a/package.json
+++ b/package.json
@@ -34,17 +34,23 @@
   "devDependencies": {
     "bondjs": "^2.0.0",
     "coveralls": "^2.11.4",
-    "istanbul": "^0.3.18",
-    "mocha": "^2.2.5",
+    "istanbul": "^0.3.19",
+    "mocha": "^2.3.2",
     "mocha-eslint": "^1.0.0",
     "mocha-istanbul": "^0.2.0",
     "proxyquire": "^1.7.1",
     "pre-commit": "^1.1.1"
   },
   "dependencies": {
+    "consul": "^0.18.0",
     "express": "^4.13.3",
     "http-status": "^0.2.0",
-    "morgan": "^1.6.1"
+    "lodash-template-tm": "0.0.1",
+    "morgan": "^1.6.1",
+    "request": "^2.61.0",
+    "stripe": "^3.7.1"
   },
-  "pre-commit": ["test"]
+  "pre-commit": [
+    "test"
+  ]
 }
