--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "A nodejs based billing system",
   "main": "src/index.js",
+  "engines": {
+    "node": ">= 0.12"
+  },
   "scripts": {
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive && if [ \"$CI\" = \"true\" ]; then cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi && rm -rf ./coverage",
     "start": "node src/index.js"
