--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "node": ">= 0.12"
   },
   "scripts": {
-    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive && if [ \"$CI\" = \"true\" ]; then cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi && rm -rf ./coverage",
-    "start": "node src/index.js"
+    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive && if [ \"$CI\" = \"true\" ]; then cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi && rm -rf ./coverage"
   },
   "config": {
-    "port": 6000
+    "account_port": 8080,
+    "admin_port": 8081,
+    "api_port": 8082,
+    "account_root": "static/account/",
+    "admin_root": "static/admin/"
   },
   "repository": {
     "type": "git",
@@ -36,6 +39,7 @@
     "mocha-istanbul": "^0.2.0"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "morgan": "^1.6.1"
   }
 }
